@@ -14,6 +14,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+        <app.port>8080</app.port>
         <spring.version>6.1.4</spring.version>
         <spring.security.version>6.2.2</spring.security.version>
         <hibernate.version>6.4.4.Final</hibernate.version>
@@ -22,6 +24,7 @@
         <logback.version>1.5.0</logback.version>
         <jackson.version>2.16.1</jackson.version>
         <jjwt.version>0.11.5</jjwt.version>
+        <hikari.version>5.1.0</hikari.version>
     </properties>
 
     <dependencies>
@@ -71,6 +74,11 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikari.version}</version>
         </dependency>
 
         <!-- Jakarta EE APIs (Tomcat 10 / Spring 6) -->
@@ -229,6 +237,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <failOnError>false</failOnError>
+                    <retryOnError>true</retryOnError>
+                </configuration>
             </plugin>
             <!-- Failsafe for Integration Tests -->
             <plugin>
@@ -254,8 +274,9 @@
                         <type>embedded</type>
                     </container>
                     <configuration>
+                        <home>${project.basedir}/.build/agriconnect-cargo-${maven.build.timestamp}/tomcat10x</home>
                         <properties>
-                            <cargo.servlet.port>8080</cargo.servlet.port>
+                            <cargo.servlet.port>${app.port}</cargo.servlet.port>
                         </properties>
                     </configuration>
                 </configuration>
